test: use udev-hid-bpf inspect to auto-generate the python callbacks
For each libtest-foo.so generate the matching libtest-foo.json file from
the bpf.o. When loading one of the .so files search for the names of our
hid_bpf_rdesc_fixup and hid_bpf_device_event functions and map those
with a fixed name in the lib. This way our tests don't need to care
about the actual function name - bpf.hid_rdesc_fixup() will call
into the right function automatically.

This makes it possible to write tests that work across multiple bpf
objects since all the individual bits are hidden away now.

Signed-off-by: Peter Hutterer <peter.hutterer@who-t.net>

--- a/test/meson.build
+++ b/test/meson.build
@@ -12,10 +12,24 @@ endif
 # per BPF program.
 foreach obj: bpf_objects
     srcfile = obj['file']
+    bpf_o = obj['bpf_o']
     src = ['test-wrapper.c'] + srcfile
     fname = fs.stem(srcfile)
     fname = fs.stem(fname)
     fname = fs.name(fname)
+
+    custom_target(
+        'test - extract json data @0@'.format(fname),
+        depends: cargo_build,
+        output: 'libtest-@0@.json'.format(fname),
+        capture: true,
+        command: [
+            cargo_build,
+            'inspect',
+            bpf_o,
+        ],
+        build_by_default: true,
+    )
     shared_library('test-@0@'.format(fname),
         src,
         c_args : ['-Wno-unknown-pragmas'],
