test: drop double check for libbpf
As of 3cc6f4517cb3 ("meson: build .bpf.o through meson")
we now require libbpf anyway so don't check again.

Signed-off-by: Peter Hutterer <peter.hutterer@who-t.net>

--- a/test/meson.build
+++ b/test/meson.build
@@ -1,9 +1,8 @@
-libbpf_dep = dependency('libbpf', required: get_option('tests'))
 pytest = find_program('pytest-3', 'pytest', required: get_option('tests'))
 pymod = import('python')
 python = pymod.find_installation('python3', required: get_option('tests'))
 
-build_tests = libbpf_dep.found() and pytest.found() and python.found()
+build_tests = pytest.found() and python.found()
 if not build_tests
     subdir_done()
 endif
