bpf/userhacks: add Microsoft Surface Dial
We convert the device into a mouse so we can use the rotating knob
as a scroll wheel.

There is even a low/high resolution change by holding the knob pressed
for at least 2 seconds.

Signed-off-by: Benjamin Tissoires <benjamin.tissoires@gmail.com>

--- a/src/bpf/userhacks/meson.build
+++ b/src/bpf/userhacks/meson.build
@@ -16,6 +16,7 @@ tracing_sources = [
 # 'sources' are BPF programs only compatible with
 # struct_ops (kernel v6.11+)
 sources = [
+    '10-Microsoft__Surface_Dial.bpf.c',
 ]
 
 foreach bpf: tracing_sources
