HID: bpf: Fix Rapoo M50 Plus Silent side buttons
The Rapoo M50 Plus Silent mouse has 2 side buttons in addition to the
left, right and middles buttons. However, its original HID descriptor
has a Usage Maximum of 3, preventing the side buttons to work.

This HID-BPF driver changes that usage to 5.

Link: https://gitlab.freedesktop.org/libinput/libinput/-/issues/1015
Signed-off-by: José Expósito <jose.exposito89@gmail.com>

--- a/src/bpf/testing/meson.build
+++ b/src/bpf/testing/meson.build
@@ -4,6 +4,7 @@
 # in the newer struct_ops approach and are thus compatible
 # for both approaches.
 tracing_sources = [
+    '10-Rapoo__M50-Plus-Silent.bpf.c',
 ]
 
 # 'sources' are BPF programs only compatible with
