meson.build: pass the target dir as arg instead of an env
Shouldn't have any functional changes but seems more expressive.

Signed-off-by: Peter Hutterer <peter.hutterer@who-t.net>

--- a/meson.build
+++ b/meson.build
@@ -38,6 +38,7 @@ use_bpf_tracing = get_option('bpf-tracing')
 
 cargo_options = [
     '--manifest-path', meson.project_source_root() / 'Cargo.toml',
+    '--target-dir', meson.project_build_root(),
 ]
 
 if get_option('buildtype') == 'release'
@@ -57,7 +58,6 @@ cargo_env = {
     'MESON_BUILD': '1',
     'MESON_BINDIR': bindir,
     'CARGO_HOME': meson.project_build_root() / 'cargo-home',
-    'CARGO_TARGET_DIR': meson.project_build_root(),
     'BPF_SOURCE_ROOT': meson.project_source_root(),
     'BPF_INSTALL_DIR': bpfdir,
     'BPF_LOOKUP_DIRS': lookup_bpfdirs,
