meson.build: swap buildtype check to detect debug builds
Instead of detecting a release build, detect a debug build to
enable the debug build and --all-targets - everything else
goes to --release.

This is more reliable for distributions like Fedora that use
-Dbuildtype=plain which before we'd detect as debug build.

Signed-off-by: Peter Hutterer <peter.hutterer@who-t.net>

--- a/meson.build
+++ b/meson.build
@@ -41,14 +41,14 @@ cargo_options = [
     '--target-dir', meson.project_build_root(),
 ]
 
-if get_option('buildtype') == 'release'
-  cargo_options += [ '--release' ]
-  rust_target = 'release'
-  message('Building in release mode')
-else
+if get_option('buildtype') in ['debug', 'debugoptimized']
   cargo_options += [ '--all-targets' ]
   rust_target = 'debug'
   message('Building in debug mode')
+else
+  cargo_options += [ '--release' ]
+  rust_target = 'release'
+  message('Building in release mode')
 endif
 
 subdir('src')
