HID: bpf: Fix NKRO on Mistel MD770
Mistel MD770 keyboard (using Holtek Semiconductor, Inc. controller) has
a quirk in report descriptor in one of its interfaces (more detail in
the source file). Fix up the descriptor to allow NKRO to work again.

Tested by loading the BPF program and confirming that 8 simultaneous
keypresses work.

Link: https://bugzilla.kernel.org/show_bug.cgi?id=218495
Signed-off-by: Tatsuyuki Ishi <ishitatsuyuki@gmail.com>

--- a/src/bpf/testing/meson.build
+++ b/src/bpf/testing/meson.build
@@ -5,6 +5,7 @@
 # for both approaches.
 tracing_sources = [
     '10-Rapoo__M50-Plus-Silent.bpf.c',
+    '10-Mistel__MD770.bpf.c',
 ]
 
 # 'sources' are BPF programs only compatible with
