Update the --help documentation and match the man page
In particular, explain how 1/2/3+ paths to udev-hid-bpf add are handled
in the --help documentation, add the lookup directories to the man page
(because we can't easily add that to --help).

Signed-off-by: Peter Hutterer <peter.hutterer@who-t.net>

--- a/meson.build
+++ b/meson.build
@@ -179,6 +179,8 @@ endforeach
 
 man_config = configuration_data()
 man_config.set('VERSION', meson.project_version())
+man_config.set('BPF_LOOKUP_DIRS', ', '.join(lookup_bpfdirs))
+man_config.set('PREFIX', prefix)
 configure_file(input: 'udev-hid-bpf.man',
                output : '@BASENAME@.1',
                configuration : man_config,
