Use a 4-digit prefix for our bpf files
The current 2-digit prefix and our increment by 10 on each generation
means we'll eventually have to worry about sort order of 10-foo vs
100-foo. If we use a zero-prefixed 4-digit prefix we won't for
a long time.

Closes #30

Signed-off-by: Peter Hutterer <peter.hutterer@who-t.net>

--- a/src/bpf/meson.build
+++ b/src/bpf/meson.build
@@ -267,12 +267,11 @@ foreach bpf_source : bpf_sources
         cmd = bpf_tracing_o_unstripped_cmd
     endif
 
-    if id < 10
-        file_id = f'0@id@'
-    else
-        file_id = f'@id@'
-    endif
-
+    a = id / 1000
+    b = id / 100
+    c = id / 10
+    d = id % 10
+    file_id = f'@a@@b@@c@@d@'
 
     filter_matches = not have_filters
     if have_filters
