HID: bpf: Fix NKRO on Mistel MD770
Mistel MD770 keyboard (using Holtek Semiconductor, Inc. controller) has
a quirk in report descriptor in one of its interfaces (more detail in
the source file). Fix up the descriptor to allow NKRO to work again.

Tested by loading the BPF program and confirming that 8 simultaneous
keypresses work.

Link: https://bugzilla.kernel.org/show_bug.cgi?id=218495
Link: https://gitlab.freedesktop.org/libevdev/udev-hid-bpf/-/merge_requests/122
Signed-off-by: Tatsuyuki Ishi <ishitatsuyuki@gmail.com>
Acked-by: Jiri Kosina <jkosina@suse.com>
Link: https://patch.msgid.link/20241017-import_bpf_6-13-v2-1-6a7acb89a97f@kernel.org
Signed-off-by: Benjamin Tissoires <bentiss@kernel.org>
Upstream commit: https://git.kernel.org/hid/hid/c/9bc089307e8d
Signed-off-by: Benjamin Tissoires <benjamin.tissoires@gmail.com>

--- a/src/bpf/stable/meson.build
+++ b/src/bpf/stable/meson.build
@@ -11,6 +11,7 @@ tracing_sources = [
     '0010-Huion__Kamvas-Pro-19.bpf.c',
     '0010-IOGEAR__Kaliber-MMOmentum.bpf.c',
     '0010-Microsoft__Xbox-Elite-2.bpf.c',
+    '0010-Mistel__MD770.bpf.c',
     '0010-Thrustmaster__TCA-Yoke-Boeing.bpf.c',
     '0010-Wacom__ArtPen.bpf.c',
     '0010-XPPen__Artist24.bpf.c',
