CI: do not export intermediate compilation files in artifacts
There is no need to have a 377MB archive for each pipeline.

This makes a 125 MB archive, which is probably way too big for
the potential use we may do with it, but it's still much better.

Signed-off-by: Benjamin Tissoires <benjamin.tissoires@gmail.com>

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -265,6 +265,8 @@ meson build and test:
   artifacts:
     paths:
       - $MESON_BUILDDIR
+    exclude:
+      - $MESON_BUILDDIR/debug/**
     when: on_success
     expire_in: 1 day
 
