CI: only collect logs and actual build output
Everything else in the build dir is an intermediate artefact we don't
need (or couldn't use) anyway.

A possible exception are the test's .so files but those add over 100M
and it's unlikely we ever need them.

Signed-off-by: Peter Hutterer <peter.hutterer@who-t.net>

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -264,9 +264,11 @@ meson build and test:
     MESON_ARGS: --prefix=$PREFIX -Dbpfs=stable,testing -Dudevdir=$PREFIX/lib/udev
   artifacts:
     paths:
-      - $MESON_BUILDDIR
-    exclude:
-      - $MESON_BUILDDIR/debug/**
+      - $MESON_BUILDDIR/src/bpf/*.bpf.o
+      - $MESON_BUILDDIR/meson-logs
+      - $MESON_BUILDDIR/udev-hid-bpf*
+      - $MESON_BUILDDIR/*.rules
+      - $MESON_BUILDDIR/*.hwdb
     when: on_success
     expire_in: 1 day
 
