--- a/src/bpf/testing/meson.build
+++ b/src/bpf/testing/meson.build
@@ -18,6 +18,7 @@ foreach bpf: tracing_sources
             'name': bpf,
             'file': files(bpf)[0],
             'install': install_testing,
+            'build_by_default': install_testing,
             'compile_with_tracing': false,
         },
     ]
@@ -27,6 +28,7 @@ foreach bpf: tracing_sources
                 'name': bpf,
                 'file': files(bpf)[0],
                 'install': install_testing,
+                'build_by_default': install_testing,
                 'compile_with_tracing': true,
             },
         ]
@@ -39,6 +41,7 @@ foreach bpf: sources
             'name': bpf,
             'file': files(bpf)[0],
             'install': install_testing,
+            'build_by_default': install_testing,
             'compile_with_tracing': false,
         },
     ]
