meson.build: do not build bpfs that aren't enabled
This effectively allows us now to just build udev-hid-bpf and assorted
bits through meson without compiling all bpfs.

Note that this is a behavior change: previously we'd built all bpfs but
only installed the testing ones by default. Now we built testing and
userhacks by default but only install the testing ones, i.e. stable is
not build by default anymore.

Signed-off-by: Peter Hutterer <peter.hutterer@who-t.net>

--- a/src/bpf/meson.build
+++ b/src/bpf/meson.build
@@ -254,6 +254,10 @@ foreach bpf_source : bpf_sources
     build_by_default = bpf_source.get('build_by_default', false)
     compile_with_tracing = bpf_source['compile_with_tracing']
 
+    if not build_by_default
+        continue
+    endif
+
     bpf_splitted = bpf.split('-')
     id = bpf_splitted[0].to_int()
     # we remove the first numbers, the first '-' and the last 2 chars for '.c'
