CI: use MESON_ARGS, not MESON_OPTIONS
Fixes: b6e91aa069e7 ("test: add a pytest wrapper for our BPF programs")

Signed-off-by: Peter Hutterer <peter.hutterer@who-t.net>

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -78,7 +78,7 @@ variables:
     perl-Term-ANSIColor
     perl-Encode
     jq
-  MESON_OPTIONS: -Dtests=enabled
+  MESON_ARGS: -Dtests=enabled
 
 .policy:
   retry:
